--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,5 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+nalgebra = { version = "0.33.0", features = ["serde", "serde-serialize"] }
+serde = { version = "1.0.204", features = ["derive"] }
