--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,4 @@ edition = "2021"
 [dependencies]
 nalgebra = { version = "0.33.0", features = ["serde", "serde-serialize"] }
 serde = { version = "1.0.204", features = ["derive"] }
+uuid = { version = "1.10.0", features = ["serde", "v4"] }
